REGRESSION (Safari 16.x?): MediaRecorder ondataavailable outputs Blobs with size:0 type:"" https://bugs.webkit.org/show_bug.cgi?id=258567 rdar://111393489

Reviewed by Eric Carlson.

Creating an AAC compressor at 96KHz may not be supported.
In case the AAC compressor creation fails, we fallback to 44100Hz.

Covered by added layout test.
Updated existing tests to cope with new audio device and with max sample rate being increased to 96KHz.

* LayoutTests/fast/mediastream/MediaDevices-getUserMedia.html:
* LayoutTests/fast/mediastream/MediaStreamTrack-getCapabilities-expected.txt:
* LayoutTests/http/tests/media/media-stream/enumerate-devices-source-id.html:
* LayoutTests/http/wpt/mediarecorder/record-96KHz-sources-expected.txt: Added.
* LayoutTests/http/wpt/mediarecorder/record-96KHz-sources.html: Added.
* Source/WebCore/platform/mediarecorder/cocoa/AudioSampleBufferCompressor.mm:
(WebCore::AudioSampleBufferCompressor::initAudioConverterForSourceFormatDescription):
* Source/WebCore/platform/mediastream/mac/MockAudioSharedUnit.mm:
(WebCore::MockAudioSharedUnit::singleton):
* Source/WebCore/platform/mock/MockRealtimeAudioSource.cpp:
(WebCore::MockRealtimeAudioSource::capabilities):
* Source/WebCore/platform/mock/MockRealtimeMediaSourceCenter.cpp:
(WebCore::defaultDevices):

Canonical link: https://commits.webkit.org/266130@main